# voting-project

./: LICENSE  README.md  pyproject.toml  requirements.txt
voting_project/: create_main_database.py  create_network.py  create_pdf_database.py
voting_project/src/classes/network/: my_network.py
voting_project/src/classes/pdf_processing/: parsed_pdf.py  person.py
voting_project/src/classes/scraper/: parsed_page.py  voting.py  voting_day.py
voting_project/src/data/: constants.py  merge_main_database.py  nodes_database.csv  pdf_database.csv
